chnage content and footer layout. Add logo for the real page.

--- a/index.html
+++ b/index.html
@@ -4,21 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My  landing page</title>
-    <link type="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="header">
         <div class="header-sub-1">
-            <h1>Header Logo</h1>
-            <p>header link one</p>
-            <p>header link two</p>
-            <p>header link three</p>
+            <span class="logo"><img src="dipayn-karmakar-high-resolution-logo-white-transparent.png" height="50px" alt="Dipayn Karmakar"></span>
+            <div class="header-link-menu">
+              <p>header link one</p>
+              <p>header link two</p>
+              <p>header link three</p>
+            </div>
         </div>
         <div class="header-sub-2">
             <div class="header-sub-2-left">
-                <h2>This website is awesome</h6>
+                <h2 class="hero-main">This website is awesome</h6>
                 <p>This website has some subtext that goes here under the main title. It's smaller font and the color is lower</p>
-                <button>Sign up</button>
+                <button class="top-button">Sign up</button>
             </div>
             <div class="header-image">
                 <p>this is a place holder for an image</p>
@@ -28,30 +30,41 @@
 
     <div class="content">
         <div class="content-sub-1">
-            <div class="image-box">image-box</div>
-            <p>this is some subtext under an illustration or image</p>
-            <div class="image-box">image-box</div>
-            <p>this is some subtext under an illustration or image</p>
-            <div class="image-box">image-box</div>
-            <p>this is some subtext under an illustration or image</p>
-            <div class="image-box">image-box</div>
-            <p>this is some subtext under an illustration or image</p>
+            <div class="info-head"> Some random information.</div>
+            <div class="info-container">
+              <div class="one-info-container">
+                  <div class="image-box">image-box</div>
+                  <p>this is some subtext under an illustration or image</p>
+              </div>
+              <div class="one-info-container">
+                  <div class="image-box">image-box</div>
+                  <p>this is some subtext under an illustration or image</p>
+              </div>
+              <div class="one-info-container">
+                  <div class="image-box">image-box</div>
+                  <p>this is some subtext under an illustration or image</p>
+              </div>
+              <div class="one-info-container">
+                  <div class="image-box">image-box</div>
+                  <p>this is some subtext under an illustration or image</p>
+              </div>
+              
+            </div>
 
         </div>
         <div class="content-sub-2">
-            <div>This is an inspiring quote, or a testimonial from a 
+            <div class="quote">This is an inspiring quote, or a testimonial from a 
               customer. Maybe it's just filling up space, or maybe 
-              people will actually read it. WHo knows? All I know 
+              people will actually read it. Who knows? All I know 
               is that it looks nice.</div>
-              <div>Thor, God of Thunder</div>
-
+              <div class="quote-credit">-Thor, God of Thunder</div>
         </div>
         <div class="content-sub-3">
             <div class="content-sub-3-left">
                 <h4>Call to action! It's time!</h3>
                 <p>Sign up for our product by clicking that button right over there!</p>
             </div>
-            <button>Sign up</button>
+            <button class="button-2">Sign up</button>
             
         </div>
 
