adds logo and hook sentences on header section. Chnage background color for button and hook sentence.

--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
         </div>
         <div class="header-sub-2">
             <div class="header-sub-2-left">
-                <h2 class="hero-main">This website is awesome</h6>
-                <p>This website has some subtext that goes here under the main title. It's smaller font and the color is lower</p>
-                <button class="top-button">Sign up</button>
+                <h2 class="hero-main">Elevate your online presence</h6>
+                <p>I can help transform your visions into stunning digital realities, one pixel at a time.</p>
+                <button class="top-button">LET'S CONNECT</button>
             </div>
             <div class="header-image">
                 <p>this is a place holder for an image</p>
