--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </div>
         <div class="header-sub-2">
             <div class="header-sub-2-left">
-                <h2 class="hero-main">Elevate your online presence</h6>
+                <h2 class="hero-main">Elevate your online presence!</h6>
                 <p>I can help transform your visions into stunning digital realities, one pixel at a time.</p>
                 <button class="top-button">LET'S CONNECT</button>
             </div>
