--- a/index.html
+++ b/index.html
@@ -9,21 +9,21 @@
 <body>
     <div class="header">
         <div class="header-sub-1">
-            <span class="logo"><img src="dipayn-karmakar-high-resolution-logo-white-transparent.png" height="50px" alt="Dipayn Karmakar"></span>
+            <span class="logo"><img src="images/dipayn-karmakar-high-resolution-logo-white-transparent.png" height="50px" alt="Dipayn Karmakar"></span>
             <div class="header-link-menu">
-              <p>header link one</p>
-              <p>header link two</p>
-              <p>header link three</p>
+              <p>Socials</p>
+              <p>Projects</p>
+              <p>CONNECT</p>
             </div>
         </div>
         <div class="header-sub-2">
             <div class="header-sub-2-left">
                 <h2 class="hero-main">Elevate your online presence!</h6>
-                <p>I can help transform your visions into stunning digital realities, one pixel at a time.</p>
+                <p>Transform your visions into stunning digital realities, one pixel at a time.</p>
                 <button class="top-button">LET'S CONNECT</button>
             </div>
             <div class="header-image">
-                <p>this is a place holder for an image</p>
+                <img src="images/my-picture.jpg" height="250px" alt="Dip's picture">
             </div>
         </div>
     </div>
