the content subsection 1 add as section for future project to be diplayed

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
     <div class="content">
         <div class="content-sub-1">
-            <div class="info-head"> Some random information.</div>
+            <div class="info-head">Projects</div>
             <div class="info-container">
               <div class="one-info-container">
                   <div class="image-box">image-box</div>
