changes content in contents subsection 2 and 3. Shows what to add later when this projects will be used as personal website.

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
                 <button class="top-button">LET'S CONNECT</button>
             </div>
             <div class="header-image">
+                <!--The image below should later be replaced by the services that will be offered-->
                 <img src="images/my-picture.jpg" height="250px" alt="Dip's picture">
             </div>
         </div>
@@ -53,18 +54,15 @@
 
         </div>
         <div class="content-sub-2">
-            <div class="quote">This is an inspiring quote, or a testimonial from a 
-              customer. Maybe it's just filling up space, or maybe 
-              people will actually read it. Who knows? All I know 
-              is that it looks nice.</div>
-              <div class="quote-credit">-Thor, God of Thunder</div>
+            <div class="quote">I will later use this section to provide more detail about me and what I learned</div>
+              <div class="quote-credit">-Karmakar, Dipayn</div>
         </div>
         <div class="content-sub-3">
             <div class="content-sub-3-left">
                 <h4>Call to action! It's time!</h3>
-                <p>Sign up for our product by clicking that button right over there!</p>
+                <p>Achieve your goals with innovative services.</p>
             </div>
-            <button class="button-2">Sign up</button>
+            <button class="button-2">LET'S CONNECT</button>
             
         </div>
 
